Fix sizes on small & large screens

--- a/client/components/MainPage/MainPage.module.css
+++ b/client/components/MainPage/MainPage.module.css
@@ -10,7 +10,7 @@
     width: 100%;
     max-width: 1100px;
     margin: auto;
-    padding: 8vmax 6vmax 4vmax;
+    padding: 32px 24px 64px;
 }
 
 .MainPageLogo {
@@ -132,6 +132,8 @@
     }
 
     .MainPageInner {
+        width: 80%;
+        max-width: 1600px;
         padding: 3.6em .2em;
     }
 }
@@ -152,6 +154,13 @@
 
     .MainPageCardGrid {
         grid-template-columns: repeat(4,1fr);
+    }
+}
+
+
+@media screen and (min-width: 1920px) {
+    .MainPageInner {
+        max-width: 2000px;
     }
 }
 
